--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,5 +24,6 @@ jobs:
     - name: Build
       run: go build -v ./...
 
-    - name: Test
-      run: go test -v ./...
+
+    - name: Kratos
+      run: cd kratos/cmd/kratos && kratos run
